manifests/apps/02-development/01-gitea/04-postgres-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: gitea
  labels:
    app: postgres
spec:
  ports:
   - port: 5432
     targetPort: 5432
  selector:
    app: postgres
