manifests/apps/02-development/01-gitea/07-redis-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: gitea
  labels:
    app: redis
    role: master
    tier: backend
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    role: master
    tier: backend
