manifests/apps/02-development/01-gitea/11-gitea-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: gitea-service
  namespace: gitea
spec:
  selector:
    app: gitea
  ports:
  - name: gitea-http
    port: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: gitea
spec:
  type: LoadBalancer
  selector:
    app: gitea
  ports:
  - name: gitea-ssh
    port: 2222
    targetPort: 22
    protocol: TCP
