manifests/apps/02-development/01-gitea/11-gitea-ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: gitea-ingress
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: git.codekernel.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-service
            port:
              number: 3000
  tls:
  - hosts:
    - git.codekernel.co.uk
